fix(visible class): fix visible class for frow

--- a/assets/_responsive.scss
+++ b/assets/_responsive.scss
@@ -155,7 +155,7 @@
         .hidden-#{$size} {
             display: block !important;
         }
-        .frow.hidden-#{$size} {
+        .frow.visible-#{$size} {
             display: flex !important;
         }
     }
